Changed home to have items aligned vertically and made button a fixed size. Made home page mobile responsive.

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,17 +1,50 @@
-.container {
-    width: 100vw;
-    height: 100vh;
+.btn {
+  width: 150px;
+}
+
+.btn:hover {
+  background-color: var(--light);
+}
+
+.masthead {
+  min-height: 30rem;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: -1;
+
+  /* background: var(--light-blue);
+  background: linear-gradient(180deg, var(--white) 0%, var(--light-blue) 100%); */
+}
+
+.masthead h1,
+.masthead .h1 {
+  font-size: 4rem;
+  margin: 0;
+  padding: 0
 }
 
 
-div {
-    height: 100px;
-    line-height: 100px;
-    text-align: left;
+
+@media(min-width: 992px) {
+  .masthead {
+    height: 100vh;
   }
 
-  h1{
-    text-align: left;
+  .masthead h1,
+  .masthead .h1 {
+    font-size: 5.5rem
   }
 
-  
+  .btn {
+    width: 250px;
+  }
+}
+
+@media (max-width: 768px) {
+  /* .masthead {
+    background: var(--light);
+  } */
+
+}
